Deployment 53f5e701-4e90-41d7-b70c-c46dc5955b26: Run number 969

--- a/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
@@ -12,7 +12,7 @@
 
             @if(Model.ContentType.Alias == "mywraBasicContent")
             {
-                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
+                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
                     <i class="fa-solid fa-chevron-left" aria-hidden="true"></i> <span class="fs-lg ps-2">Back to @Model.Parent.Name</span>
                 </a>
             } else {
@@ -37,7 +37,7 @@
             @if(Model.ContentType.Alias == "mywraBasicContent")
             {
 
-                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
+                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
                     <i class="fa-solid fa-chevron-left" aria-hidden="true"></i> <span class="fs-lg ps-2">Back to @Model.Parent.Name</span>
                 </a>
 
