--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -79,7 +79,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn text d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
@@ -126,7 +126,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn text d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
@@ -154,7 +154,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
@@ -237,7 +237,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn text d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
@@ -270,7 +270,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn text d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
@@ -298,7 +298,7 @@
                             <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                                 <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                     <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9 h-100">
-                                        <button class="js-page-tab-return-btn page-tab-return-btn  outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
+                                        <button class="js-page-tab-return-btn page-tab-return-btn text d-block mx-auto outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">My Company</span></button>
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
